[package]
name = "rotom-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["drv"]

[dependencies]
object_store = "0.12.2"
ntex-multipart = "2.0.0"
drv = { path = "./drv" }

[dependencies.uuid]
version = "1.16.0"
features = ["v4"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.config]
version = "0.15.11"
default-features = false
features = ["toml"]

[dependencies.ntex]
version = "2.13.2"
default-features = false
features = ["tokio"]

[dependencies.sqlx]
version = "0.8.5"
features = ["postgres", "runtime-tokio", "uuid"]
