[package]
name = "rotom-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["drv"]

[dependencies]
ntex-multipart = "2.0.0"
ntex-files = "2.1.0"
sha2 = "0.10.9"
drv = { path = "./drv" }

[dependencies.uuid]
version = "1.16.0"
features = ["v4"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.config]
version = "0.15.11"
default-features = false
features = ["toml"]

[dependencies.futures]
version = "0.3.31"
default-features = false

[dependencies.ntex]
version = "2.15.1"
default-features = false
features = ["tokio"]

[dependencies.sqlx]
version = "0.8.5"
features = ["postgres", "runtime-tokio", "uuid"]
